--- a/TestMonitorTesting/TestMonitorTesting.csproj
+++ b/TestMonitorTesting/TestMonitorTesting.csproj
@@ -17,4 +17,30 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Wrappers\" />
+    <Folder Include="TestData\" />
+    <Folder Include="Steps\" />
+    <Folder Include="Pages\" />
+    <Folder Include="Services\API\" />
+    <Folder Include="Tests\API\" />
+    <Folder Include="Tests\GUI\" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<None Remove="appsettings.json" />
+		<Content Include="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<None Remove="allureConfig.json" />
+		<Content Include="allureConfig.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<None Remove="NLog.config" />
+		<Content Include="NLog.config">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
 </Project>
